<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

        <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:layout_below="@id/et_last_name"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="#673AB7"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-29dp"
            android:layout_marginBottom="-136dp"
            android:contentDescription="@string/createAccountGrass"
            app:srcCompat="@drawable/profile_background_grass_1280x640_withbg" />

        <ImageView
            android:layout_width="315dp"
            android:layout_height="718dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="230dp"
            android:layout_marginEnd="-134dp"
            android:layout_marginBottom="-253dp"
            android:contentDescription="@string/createAccountElephant"
            app:srcCompat="@drawable/profile_placeholder_640x533" />

</RelativeLayout>