<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="#BED8CD"
            android:contentDescription="@string/loginBgImage" />

        <EditText
            android:id="@+id/login_email"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="150dp"
            android:autofillHints="Email"
            android:ems="10"
            android:fontFamily="@font/quicksand_bold"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_login"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_email"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Password"
            android:ems="10"
            android:fontFamily="@font/quicksand_bold"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register_account"
            style="@style/viewCustom"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/loginBubble"
            android:layout_width="327dp"
            android:layout_height="340dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-29dp"
            android:contentDescription="@string/loginBubble"
            app:srcCompat="@drawable/think_bubble_640" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="97dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/education_mobile_app"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="357dp"
            android:layout_height="399dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="240dp"
            android:layout_marginTop="-46dp"
            android:layout_marginEnd="-186dp"
            android:contentDescription="@string/loginElephant"
            app:srcCompat="@drawable/profile_placeholder_640x533" />

</RelativeLayout>