<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <Button
        android:id="@+id/btn_submit"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:background="@color/colorAccent"
        android:text="@string/send_password_reset_email"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="430dp"
        android:layout_height="625dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-11dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-126dp"
        android:contentDescription="@string/forgotpasswordbgdoge"
        app:srcCompat="@drawable/dog_profile_pic" />

    <ImageView
        android:layout_width="463dp"
        android:layout_height="418dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="148dp"
        android:contentDescription="@string/forgotpasswordbgbubble"
        app:srcCompat="@drawable/think_bubble_640" />
</RelativeLayout>