<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:contextClickable="false"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_data"
        android:layout_alignParentStart="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="43dp"
        android:padding="15dp"
        android:text="@string/go_to_courses"
        android:textColor="#605D5D" />

    <TableLayout
        android:id="@+id/tl_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ib_profile_pic"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/first_name_profile"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/quicksand_bold"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/last_name_profile"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:typeface="normal"
                tools:text="Last Name :" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:layout_width="297dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/email_profile"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                tools:text="Your Email :" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="14sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/email_verified_profile"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                tools:text="Verified :" />

            <TextView
                android:id="@+id/tv_email_verifiied"
                android:layout_width="280sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="14sp" />

        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/ib_profile_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/image_profile"
        android:scaleType="centerInside"
        android:src="@drawable/profile_placeholder_640x533" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/ib_profile_pic"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/textWelcome"
        android:textColor="#605D5D"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWelcome"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/ib_profile_pic"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/textWelcome2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="672dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-140dp"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="-200dp"
        android:contentDescription="@string/background_grass"
        app:srcCompat="@drawable/profile_background_grass_1280x640_withbg" />

</RelativeLayout>